--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -47,4 +47,7 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Map/World.World
+GameDefaultMap=/Game/Map/World.World
 
