Waffen pickup hinzugefügt

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -41,6 +41,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SelectKnife",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SelectGun",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="aufnheme",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="right",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="lookup",Key=MouseY,Scale=-1.000000)
