--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -45,6 +45,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="SelectGun",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="aufnheme",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Aim",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SelectKnife",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SelectGun",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="right",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="lookup",Key=MouseY,Scale=-1.000000)
