--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -47,6 +47,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Aim",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SelectKnife",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SelectGun",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="invetar",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="reload",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="right",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="lookup",Key=MouseY,Scale=-1.000000)
