--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2A245C944109E0148EFB309EC1B0E7D7
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=True
++StartupMovies=Talx_2
+
