--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Map/World.World
-GameDefaultMap=/Game/Map/World.World
+GameDefaultMap=/Game/menu/MenuLvl.MenuLvl
 
 [/Script/Engine.Engine]
 NearClipPlane=1.000000
