--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -49,6 +49,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="SelectGun",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="invetar",Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="reload",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Pause",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Forward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="right",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="lookup",Key=MouseY,Scale=-1.000000)
