--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,6 +13,10 @@ GameDefaultMap=/Game/menu/MenuLvl.MenuLvl
 [/Script/Engine.Engine]
 NearClipPlane=1.000000
 
+[/Script/Engine.AudioSettings]
+MaximumConcurrentStreams=5425033
+VoiPSampleRate=Normal24000Hz
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
