bär zum angreifen gebracht und escape rusia map verbessert

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/World.World
+EditorStartupMap=/Game/Map/EscapeRussia.EscapeRussia
 GameDefaultMap=/Game/menu/MenuLvl.MenuLvl
 
 [/Script/Engine.Engine]
@@ -57,5 +57,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
